# simple-chat

./: .gitignore  README.md  RESOURCES.md
chat-server/: Cargo.toml
chat-server/src/: channel.rs  channel_actor.rs  errors.rs  lib.rs  main.rs  registry_actor.rs  server.rs  server_actor.rs  websocket.rs
chat-web/: package.json
chat-web/src/: App.tsx
chat-web/src/api/: types.ts
chat-web/src/app/: store.ts
chat-web/src/channel/: Channel.tsx  module.ts
chat-web/src/websocket/: WebsocketContext.tsx
scripts/: curl-websocket.sh
