[package]
name = "chat-server"
version = "0.1.0"
authors = ["fpaschos <fpaschos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.14"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.5.0", features = ["full"] }
tokio-stream = "0.1.5"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
warp = "0.3.1"
