[package]
name = "chat-server"
version = "0.1.0"
authors = ["fpaschos <fpaschos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.14"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.24"
tokio = { version = "1.5.0", features = ["full"] }
tokio-stream = "0.1.5"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
warp = "0.3.1"

[profile.release]
lto = true # Speed optimization for releases see more at https://stackoverflow.com/questions/52291006/why-does-using-lto-increase-the-size-of-my-rust-binary
